--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -22,4 +22,4 @@ jobs:
       - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
       - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "@cyb3rking" -Force)
       - name: Create Tunnel
-        run: ngrok tcp 3389
+        run: ngrok tcp --log stdout 3389
